[tool.isort]
profile = "black"

[tool.setuptools]
packages = ["curifactory"]

[tool.setuptools.dynamic]
version = {attr = "curifactory.__version__"}

[tool.setuptools.package-data]
curifactory = ["data/*", "data/.dockerignore"]

[project]
name = "curifactory",
description = "An experiment workflow and organization tool"
keywords = ["research", "experiment", "workflow"]
dynamic = ["version"]
dependencies = [
    "numpy",
    "pandas",
    "ipynb-py-convert",
    "graphviz",
    "matplotlib",
    "psutil",
    "rich",
    "argcomplete",
]
requires-python = ">=3.10"
readme = "README.md"
license = "BSD-3-clause"
license-files = ["LICENSE"]
authors = [
    { name = "Nathan Martindale, Jason Hite, Scott L. Stewart, Mark Adams", email = "curifactory-help@ornl.gov" }
]
classifers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research"
]

[project.optional-dependencies]
h5 = ["tables"]

[project.urls]
Repository = "https://github.com/ORNL/curifactory"
Changelog = "https://github.com/ORNL/curifactory/blob/main/CHANGELOG.md"
Issues = "https://github.com/ORNL/curifactory/issues"
Documentation = "https://ornl.github.io/curifactory/stable/index.html"

[project.scripts]
experiment = "curifactory.cli:main"
curifactory = "curifactory.project:main"
cf = "curifactory.experimental.cli:main"
